<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:orientation="vertical"
  tools:context=".MainActivity">

  <EditText
    android:id="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/share_title"
    android:hint="@string/title_hint"
    android:inputType="textMultiLine" />

  <EditText
    android:id="@+id/text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/default_text"
    android:hint="@string/text_hint"
    android:inputType="textMultiLine" />

  <EditText
    android:id="@+id/subject"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/subject"
    android:inputType="textMultiLine" />

  <EditText
    android:id="@+id/mime_type"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/default_mime_type"
    android:hint="@string/mime_type_hint"
    android:inputType="text" />

  <Spinner
    android:id="@+id/target_apps"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dip"
    android:layout_marginBottom="10dip" />

  <EditText
    android:id="@+id/data_uri"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/data_uri_hint"
    android:inputType="textUri" />

  <Switch
    android:id="@+id/show_most_recently_used"
    android:text="@string/show_most_recently_used"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dip"
    android:layout_marginBottom="10dip" />

  <Button
    android:id="@+id/share"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/share" />

</LinearLayout>
