<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:orientation="vertical"
  tools:context=".MainActivity">

  <EditText
    android:id="@+id/text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/default_text"
    android:hint="@string/text_hint"
    android:inputType="textMultiLine" />

  <Button
    android:id="@+id/share"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/share" />

</LinearLayout>
